# pytorch_inc_compute

./: .gitignore  CMakeLists.txt  README.md  portfile.cmake  vcpkg.json
include/: master.h  worker.h
simulated_switch/: README.md  master.py  server.py  test_allreduce.py  worker.py
src/: main.cpp  master.cpp  worker.cpp
